[tool.poetry]
name = "saferl"
version = "0.1.1"
description = ""
authors = ["daittan <tanmay.khandait@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.3"
gym = "^0.9.7"
chainerrl = "^0.8.0"


[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
run = "wsgi:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
